frontend/tests/regression/illtyped/flatten/flattenByLet.gr
flatten : forall m : Nat, n : Nat . (Int |m|) |n| -> Int |m * n|
flatten xbb = let |xb| = xbb in let |x| = xb in |x|
